<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iconApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/logo" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/tvWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="#ffffff"
                    android:textSize="24sp" />

                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/tvClip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clip"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/topic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvClip"
                    android:layout_centerHorizontal="true"
                    android:text="@string/topic"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </FrameLayout>

        <Button
            android:id="@+id/btn_getstarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp"
            android:background="@drawable/btn_getstarted_normal"
            android:padding="16dp"
            android:text="@string/get_started"
            android:textColor="@drawable/selector_text_getstarted" />

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:paddingBottom="16dp"
            android:text="@string/skip"
            style="@style/TextViewStyle.Green"
            android:textColor="#ff9900"/>

        <TextView
            android:id="@+id/tvPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="4dp"
            android:text="@string/below_welcome_page"
            style="@style/TextViewStyle" />

    </LinearLayout>

</RelativeLayout>
